--- a/BEC-Vuongquocvuive/BLL/BLL.csproj
+++ b/BEC-Vuongquocvuive/BLL/BLL.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CatalogBLL.cs" />
+    <Compile Include="GameBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoryBLL.cs" />
     <Compile Include="Story_PageBLL.cs" />
