--- a/BEC-Vuongquocvuive/DAL/DAL.csproj
+++ b/BEC-Vuongquocvuive/DAL/DAL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CatalogDAL.cs" />
     <Compile Include="clsDb-Access.cs" />
+    <Compile Include="GameDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoryDAL.cs" />
     <Compile Include="Story_PageDAL.cs" />
