--- a/BEC-Vuongquocvuive/DTO/DTO.csproj
+++ b/BEC-Vuongquocvuive/DTO/DTO.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CatalogDTO.cs" />
+    <Compile Include="GameDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoryDTO.cs" />
     <Compile Include="Story_PageDTO.cs" />
