--- a/BEC-Vuongquocvuive/BEC-Vuongquocvuive/Web.config
+++ b/BEC-Vuongquocvuive/BEC-Vuongquocvuive/Web.config
@@ -8,7 +8,7 @@
 <configuration>
   <connectionStrings>
     <add name="BECApplicationServices"
-         connectionString="Data Source=NhEch;Initial Catalog=BEC;Integrated Security=True"
+         connectionString="Data Source=TONYPC;Initial Catalog=BEC;Persist Security Info=True;User ID=sa;Password=tony"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 
