--- a/BEC-Vuongquocvuive/BEC-Vuongquocvuive/Web.config
+++ b/BEC-Vuongquocvuive/BEC-Vuongquocvuive/Web.config
@@ -8,7 +8,7 @@
 <configuration>
   <connectionStrings>
     <add name="BECApplicationServices"
-         connectionString="Data Source=TONYPC;Initial Catalog=BEC;Persist Security Info=True;User ID=sa;Password=tony"
+         connectionString="Data Source=NhEch;Initial Catalog=BEC;Integrated Security=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 
@@ -49,4 +49,5 @@
   <system.webServer>
      <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
+   
 </configuration>
