--- a/BEC-Vuongquocvuive/BLL/BLL.csproj
+++ b/BEC-Vuongquocvuive/BLL/BLL.csproj
@@ -42,9 +42,11 @@
   <ItemGroup>
     <Compile Include="CatalogBLL.cs" />
     <Compile Include="GameBLL.cs" />
+    <Compile Include="Game_PlayerBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoryBLL.cs" />
     <Compile Include="Story_PageBLL.cs" />
+    <Compile Include="Story_ViewBLL.cs" />
     <Compile Include="UserBLL.cs" />
     <Compile Include="User_TypeBLL.cs" />
   </ItemGroup>
