--- a/BEC-Vuongquocvuive/DTO/DTO.csproj
+++ b/BEC-Vuongquocvuive/DTO/DTO.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="CatalogDTO.cs" />
     <Compile Include="GameDTO.cs" />
+    <Compile Include="Game_PlayerDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoryDTO.cs" />
     <Compile Include="Story_PageDTO.cs" />
