--- a/BEC-Vuongquocvuive/BEC-Vuongquocvuive/BEC-Vuongquocvuive.csproj
+++ b/BEC-Vuongquocvuive/BEC-Vuongquocvuive/BEC-Vuongquocvuive.csproj
@@ -677,6 +677,7 @@
     <Content Include="Presentation\data\games\path\boom.swf" />
     <Content Include="Presentation\data\games\path\Caro.swf" />
     <Content Include="Presentation\data\games\path\Chơi game AngryBirds - Thử tài thiện xạ.swf" />
+    <Content Include="Presentation\data\games\path\Chơi game AngryBirds -.swf" />
     <Content Include="Presentation\data\games\path\Chơi game Cuộc hành trình của Penny – Game y8 miễn phí.swf" />
     <Content Include="Presentation\data\games\path\Chơi game Cờ Vua - Gamedangianviet.com.swf" />
     <Content Include="Presentation\data\games\path\Chơi game dẫn nước tưới hoa - Gamedangianviet.com.swf" />
