--- a/BEC-Vuongquocvuive/BEC-Vuongquocvuive/Web.config
+++ b/BEC-Vuongquocvuive/BEC-Vuongquocvuive/Web.config
@@ -8,7 +8,7 @@
 <configuration>
   <connectionStrings>
     <add name="BECApplicationServices"
-         connectionString="Data Source=NhEch;Initial Catalog=BEC;Integrated Security=True"
+         connectionString="Data Source=NHech;Initial Catalog=BEC4;Integrated Security=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 
@@ -49,7 +49,5 @@
   <system.webServer>
      <modules runAllManagedModulesForAllRequests="true"/>
   </system.webServer>
-  
-
 
 </configuration>
